--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -9,30 +9,14 @@
   flex-direction: column;
   justify-content: center;
   overflow: hidden;
-  background: #f6f7f8;
-  width: 370px;
-  height: auto;
+  background: #000;
+  width: 25%;
+  height: 105px;
   margin-left: 37%;
   margin-top: 10%;
-  margin-bottom: 20px;
 }
 
 .Logo-Header img {
   justify-content: center;
   height: 105px;
-}
-
-.SearchBar {
-  margin: 0px, 0px, 0px, 0px;
-}
-
-.SearchBar-Submit {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  padding: 3px;
-  outline: #c77dbf;
-  outline-style: outset;
-  outline-width: 2px;
 }
