--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -18,14 +18,14 @@
     flex-direction: row;
     width: 100%;
     height: auto;
+    flex-shrink: 0;
 }
 
 .SearchBar-Fields input {
     width: 50%;
     height: 38.4%;
     text-align: center;
-    font-size: 18px;
-    align-self: center;
+    font: 400 18px Arial;
     border-radius: 4px;
     margin-left: 140px;
     margin-right: 5px;
@@ -37,6 +37,7 @@
     border-radius: 4px;
     height: 18px;
     align-self: center;
+    font-size: 16px;
 }
 
 .SearchBar-Submit {
@@ -44,6 +45,7 @@
     justify-content: center;
     margin-top: 6px;
     height: 20px;
+    text-align: center;
 }
 
 .SearchBar-Submit a {
