--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -5,9 +5,9 @@
 
 .Logo-Header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  overflow: hidden;
+  overflow: initial;
   width: 34%;
   margin: 2.5% 33% 16px 33%;
 }
@@ -16,9 +16,8 @@
   object-fit: contain;
   height: auto;
   width: 100%;
-}
-
-.SearchBar-Submit {
-  padding: 3px;
-  margin: 10px, 0px, 0px, 0px;
+  max-width: 600px;
+  max-height: 650px;
+  min-width: 200px;
+  min-height: 65px;
 }
