--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -1,4 +1,4 @@
-.Product {
+.product-card {
     display: inline-flex;
     flex-direction: row;
     background: #fff;
@@ -9,46 +9,46 @@
     margin-bottom: 10px;
 }
 
-.Product-Image {
+.product-image {
     display: inline-flex;
     margin: 16px;
     padding: 16px 19.2px 16px 19.2px;
 }
 
 @media screen and (max-width: 411px) {
-    .Product-Image {
+    .product-image {
         margin-right: 16px;
         padding: 4px 4.8px 4px 4.8px;
     }
 }
 
-.Product-Text {
+.product-text {
     display: inline-flex;
     flex-direction: column;
     margin: 16px 0px 16px 0px;
 }
 
-.Product-Name {
+.product-name {
     margin-bottom: 8px;
     font-size: 19.2px;
     font-weight: 600;
 }
 
-.Product-Info {
+.product-info {
     display: inline-flex;
     flex-direction: row;
 }
 
-.Product h3 {
+.product h3 {
     margin-bottom: 3.2px;
     font-weight: 500;
 }
 
-.Product-Image img {
+.product-image img {
     height: 128px;
     width: 128px;
 }
 
-.Product-Usage {
+.product-usage {
     margin-right: 10%;
 }
