--- a/client/src/components/ProductList/ProductList.css
+++ b/client/src/components/ProductList/ProductList.css
@@ -1,4 +1,4 @@
-.ProductList {
+.product-list {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 411px) {
-    .ProductList {
+    .product-list {
         width: 100%;
         margin-right: 1%;
         margin-left: 1%;
