--- a/client/src/components/SearchResultPage/SearchResultPage.css
+++ b/client/src/components/SearchResultPage/SearchResultPage.css
@@ -1,8 +1,8 @@
 .logo-header {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    overflow: hidden;
+    overflow: initial;
     width: 34%;
     margin: 2.5% 33% 16px 33%;
 }
@@ -11,5 +11,9 @@
     object-fit: contain;
     height: auto;
     width: 100%;
+    max-width: 600px;
+    max-height: 650px;
+    min-width: 200px;
+    min-height: 65px;
 }
   
