--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: center;
     width: 34%;
-    margin-left: 33%;
-    margin-right: 33%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .search-fields {
@@ -27,11 +27,12 @@
 
 
 .search-fields select {
-    width: 11%;
-    border-radius: 4px;
+    display: block;
+    width: 5em;
+    border-radius: 0.24em;
     height: 35px;
     align-self: center;
-    font-size: 16px;
+    font-size: 1em;
 }
 
 .search-submit {
@@ -44,13 +45,14 @@
 .search-submit a {
     background-color: blueviolet;
     border-radius: 16px;
-    padding: 0.5em 1em 0.5em 1em;
+    padding: 0.2em 0.5em 0.2em 0.5em;
     text-align: center;
     color: whitesmoke;
     text-decoration-color: whitesmoke;
     border-style: solid;
     border-color: blueviolet;
     border-width: 0.5em;
+    margin: 1.5em 0em 1.5em 0em;
 }
 
 .switch {
@@ -145,5 +147,9 @@ input:checked + .slider-round:before {
 
     .search-submit {
         margin-top: 1em;
+    }
+
+    .switch {
+        margin-top: 0.8em;
     }
 }
