--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -30,7 +30,7 @@
 
 .product-name {
     margin-bottom: 8px;
-    font-size: 19.2px;
+    font-size: 1.1em;
     font-weight: 600;
 }
 
@@ -40,13 +40,13 @@
 }
 
 .product h3 {
-    margin-bottom: 3.2px;
+    margin-bottom: 0.2em;
     font-weight: 500;
 }
 
 .product-image img {
-    height: 128px;
-    width: 128px;
+    height: 7em;
+    width: 7em;
 }
 
 .product-usage {
