--- a/client/src/components/SearchResultPage/SearchResultPage.css
+++ b/client/src/components/SearchResultPage/SearchResultPage.css
@@ -1,3 +1,8 @@
+body {
+    height: 100%;
+    background-color: black;
+}
+
 .logo-header {
     display: flex;
     flex-direction: row;
@@ -5,6 +10,11 @@
     overflow: initial;
     width: 34%;
     margin: 2.5% 33% 1em 33%;
+}
+
+.search-result {
+    background-color: goldenrod;
+    min-height: 1;
 }
   
 .logo-header img {
@@ -16,7 +26,6 @@
     min-width: 200px;
     min-height: 65px;
 }
-
 
 @media screen and (max-width: 411px) {
     .logo-header {
