--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   width: 100%;
-  background-color: #f6f7f8;
+  background-color: black;
   overflow-y: scroll;
   margin-left: calc(100vw - 100%);
 }
