--- a/client/src/components/SearchResultPage/SearchResultPage.css
+++ b/client/src/components/SearchResultPage/SearchResultPage.css
@@ -1,5 +1,5 @@
 .search-result {
-    background-color: goldenrod;
+    background-color: whitesmoke;
     min-height: 1;
     padding-left: calc(100vw - 100%);
 }
