--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -1,10 +1,10 @@
 .product-card {
     display: inline-flex;
     flex-direction: row;
-    background: #fff;
+    background: whitesmoke;
     border-radius: 7px;
     border-style: solid;
-    border-color: #e0e2e3;
+    border-color: blueviolet;
     border-width: 1px;
     margin-bottom: 10px;
 }
@@ -13,6 +13,14 @@
     display: inline-flex;
     margin: 16px;
     padding: 16px 19.2px 16px 19.2px;
+}
+
+.product-name {
+    color: black;
+}
+
+.product-info {
+    color: blueviolet;
 }
 
 @media screen and (max-width: 411px) {
