--- a/client/src/components/SearchResultPage/SearchResultPage.css
+++ b/client/src/components/SearchResultPage/SearchResultPage.css
@@ -4,7 +4,7 @@
     padding-left: calc(100vw - 100%);
 }
 
-.logo-header {
+.logo {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -13,7 +13,7 @@
     margin: 2.5% 33% 1em 33%;
 }
 
-.logo-header img {
+.logo img {
     object-fit: contain;
     height: auto;
     width: 100%;
