--- a/client/src/components/HeaderSearchBar/HeaderSearchBar.css
+++ b/client/src/components/HeaderSearchBar/HeaderSearchBar.css
@@ -1,3 +1,22 @@
+.search-fields-header {
+    margin: 0em 0em 0em auto;
+}
+
+.search-submit-header {
+    margin: 0em auto 0em 0em;
+}
+
+.search-fields-header,
+.switch-header {
+    transition: background-color 0.5s;
+}
+
+.search-bar-header input:hover,
+.search-submit-header a:hover,
+.search-bar-header .slider-round:hover {
+    border-color: black;
+}
+
 .search-bar-header {
     background: white;
     display: flex;
@@ -111,4 +130,15 @@ input:checked + .slider-round-header:before {
     border-color: darkgray;
     border-width: 0.2em;
     margin: 0.16em 0.44em 1em 0.44em;
+}
+
+.about {
+    margin: 0em 0.8em 0em 0.8em;
+    font-weight: bold;
+    color: darkgray;
+    transition: color 0.3s;
+}
+
+.about:hover {
+    color: black;
 }
