--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -8,6 +8,7 @@
     border-width: 0.4em;
     margin-bottom: 0.8em;
     height: auto;
+    transition: border-color 0.3s;
 }
 
 .product-card:hover {
