--- a/client/src/components/SearchBar/SearchBar.css
+++ b/client/src/components/SearchBar/SearchBar.css
@@ -25,7 +25,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: darkgray;
+    background-color: blueviolet;
     transition: .4s;
 }
   
@@ -41,7 +41,7 @@
 }
   
 input:checked + .slider-round {
-    background-color: darkgray;
+    background-color: blueviolet;
 }
 
 .slider-round {
